# olinpiades

./: .gitignore  .gitmodules  DemoSequencer.c  DemoSequencer.h  Makefile  README.md  ScrollingText.c  ScrollingText.h  affichage.c  affichage.h  anti_text.c  anti_text.h  demo_eyedevil.c  eye.c  eye.h  eye_sprites.c  eye_sprites.h  eyedevil.c  eyedevil.h  eyedevil_sprites.c  eyedevil_sprites.h  font.c  font.h  framebuffer.c  framebuffer.h  hardware.h  hardware_PC.c  hardware_dsPIC33F.c  keyanimation.c  keyanimation.h  main.c  mainPC.c  sprite.c  sprite.h  text.c  text.h  yeux_char  yeux_char_left  yeux_char_right  yeux_char_sym
Logique/: Carte OlINPiades 2017 - Logique.kicad_pcb  Carte OlINPiades 2017 - Logique.pro  Carte OlINPiades 2017 - Logique.sch  NouvelleCarteLogique-cache.lib  NouvelleCarteLogique.kicad_pcb  NouvelleCarteLogique.kicad_prl  NouvelleCarteLogique.kicad_pro  NouvelleCarteLogique.pro  NouvelleCarteLogique.sch  fp-lib-table  sym-lib-table
Logique/libraries/: LogoGuillaumeDALLE.kicad_mod  LogoRobotronik.kicad_mod  LogoRobotronikGrand.kicad_mod  LogoRobotronikPetit.kicad_mod  mmdt2907a.dcm  mmdt2907a.lib  olinpiades.dcm  olinpiades.lib
Matrice/: Carte OlINPiades 2017 - Matrice.kicad_pcb  Carte OlINPiades 2017 - Matrice.pro  Carte OlINPiades 2017 - Matrice.sch  fp-lib-table
Matrice/libraries/Matrice.pretty/: robotronik_logo_big.kicad_mod
Prog/: Makefile  README.md
Prog/hal/: stm32f3xx_hal_conf.h  stm32f3xx_it.c  stm32f3xx_it.h
Prog/lowlevel/: crc_16.c  crc_16.h  display.c  display.h  dma.c  dma.h  gpio.c  robotronik_protocol.c  robotronik_protocol.h  robotronik_protocol_stm32.h  tim.c  tim.h  usart.c  usart.h
Prog/matrices/: .mxproject  Makefile
Prog/matrices/Inc/: blink.h  udelay.h  write_matrice.h
Prog/matrices/Src/: blink.c  main.c  main_hal.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c  udelay.c  write_matrice.c
Prog/src/: blink.c  blink.h  main.c  main_hal.c  main_hal.h  sprites.c  sprites.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  write_matrix.c  write_matrix.h
Prog_2/: Makefile
Prog_2/matrices/Inc/: main.h
Prog_2/matrices/Src/: main.c
software/: Makefile  README.md  frames_definition.c  frames_definition.h  frames_get.c  frames_get.h  main.c  main_tests_native.cpp  matrix.ioc  meson.build  stm32f303.meson  synchronize.c  synchronize.h
software/frames_generator/: Makefile  PC_decode_test.c  eyes_skull.c  eyes_skull.h  frames_definition.c  frames_definition.h  frames_get.c  frames_get.h  generate.py  generateold.py  meson.build
software/gdb/: attach.gdb  gdb-pipe.cfg
software/lowlevel/: clock.c  clock.h  debug.c  debug.h  matrix_driver.c  matrix_driver.h  uart.c  uart.h
sprites/: eye_blink.h  eye_blink.xcf  eye_cruel1_norm.xcf  eye_cruel2_norm.xcf  eye_cruel3_norm.xcf  eye_cruel3_pupil.xcf  eye_cruel_0.h  eye_cruel_0.xcf  eye_cruel_0_m.h  eye_cruel_0_mask_m.h  eye_cruel_0_mask_m.xcf  eye_cruel_1.h  eye_cruel_1.xcf  eye_cruel_1_m.h  eye_cruel_1_m.xcf  eye_cruel_1_mask.h  eye_cruel_1_mask.xcf  eye_cruel_1_mask_m.h  eye_cruel_1_mask_m.xcf  eye_cruel_2.h  eye_cruel_2.xcf  eye_cruel_2_m.h  eye_cruel_2_m.xcf  eye_cruel_2_mask.h  eye_cruel_2_mask.xcf  eye_cruel_2_mask_m.h  eye_cruel_2_mask_m.xcf  eye_cruel_3.h  eye_cruel_3_m.h  eye_cruel_3_m.xcf  eye_cruel_3_mask.h  eye_cruel_3_mask.xcf  eye_cruel_3_mask_m.h  eye_cruel_3_mask_m.xcf  eye_cruel_pupil _mask.xcf  eye_cruel_pupil.h  eye_happy.h  eye_happy.xcf  eye_normal.h  eye_normal.xcf  (+2 more)
